--- a/CC.WebAPIs/appsettings.json
+++ b/CC.WebAPIs/appsettings.json
@@ -40,8 +40,6 @@
     }
   },
   "APIBaseURLs": {
-    "CalendarAPI": "http://liveapidev.livekube.com:4761",
-    "DispatchAPI": "http://127.0.0.1:13002",
-    "PlaywrightAPI": "http://cp.livekube.com:13003"
+    "FrankfurterAPI": "https://api.frankfurter.app"
   }
 }
