--- a/CC.WebAPIs/appsettings.json
+++ b/CC.WebAPIs/appsettings.json
@@ -23,21 +23,12 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/SB-Schedule-API-.txt",
+          "path": "Logs/CC-API-.txt",
           "rollingInterval": "Day"
         }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
-  },
-  "Databases": {
-    "MongoDB": {
-      "URL": "mongodb://mongoAdmin:O4BM0ng04232s3r0@175.110.115.10:27417/live?authSource=admin",
-      "DBName": "live"
-    },
-    "mySQL": {
-      "ConnectionString": ""
-    }
   },
   "APIBaseURLs": {
     "FrankfurterAPI": "https://api.frankfurter.app"
